# Tinker

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  LICENSE  README.md  Tinker.10x  TinkerApp.sln  build.bat  clang-format.py
Benchmark/: BenchmarkMain.cpp  TinkerBenchmark.h
Benchmark/ContainerBenchmarks/: HashMapBenchmarks.cpp  HashMapBenchmarks.h
Benchmark/DataStructureBenchmarks/: HashMapBenchmarks.cpp  HashMapBenchmarks.h
Benchmark/MathBenchmarks/: VectorTypeBenchmarks.cpp  VectorTypeBenchmarks.h
Core/: Allocators.h  AssetFileParsing.cpp  AssetFileParsing.h  CoreDebugUI.cpp  CoreDebugUI.h  CoreDefines.h  FileLoading.cpp  FileLoading.h  Hashing.cpp  Hashing.h  Mem.cpp  Mem.h  Sorting.h  StringTypes.h
Core/Asset/: AssetLibrary.cpp  AssetLibrary.h  AssetLoader.cpp  AssetLoader.h  FileParsing.cpp  FileParsing.h
Core/Containers/: HashMap.cpp  HashMap.h  RingBuffer.h  Vector.cpp  Vector.h
Core/DataStructures/: HashMap.cpp  HashMap.h  RingBuffer.h  Vector.cpp  Vector.h
Core/FileIO/: FileLoading.cpp  FileLoading.h
Core/Graphics/: VirtualTexture.h
Core/Graphics/Common/: GraphicsCommon.cpp  GraphicsCommon.h  ShaderManager.cpp  (+3 more)
Core/Math/: VectorTypes.cpp  VectorTypes.h
Core/Platform/: PlatformCommon.h  PlatformGameAPI.h  PlatformGameInputHandlingAPI.h  PlatformGameThreadAPI.h  ShaderManager.cpp  ShaderManager.h  Win32Client.cpp  Win32Client.h  Win32File.cpp  Win32Layer.cpp  Win32Logging.cpp  Win32PlatformGameAPI.cpp  Win32Server.cpp  Win32WorkerThreadPool.cpp  Win32WorkerThreadPool.h
Core/Raytracing/: RayIntersection.cpp  RayIntersection.h
Core/Utilities/: Mem.cpp  MemTracker.cpp
Core/Utility/: Logging.h  MemTracker.cpp  MemTracker.h  ScopedTimer.h
DebugUI/: DebugUI.cpp  DebugUI.h
Demo/: Main.cpp
Game/: AssetManager.cpp  AssetManager.h  BindlessSystem.cpp  BindlessSystem.h  Camera.cpp  Camera.h  GameGraphicsTypes.cpp  GameGraphicsTypes.h  GameMain.cpp  GameRaytracing.cpp  GameRaytracing.h  GameRenderPass.cpp  GameRenderPass.h  GraphicsTypes.cpp  GraphicsTypes.h  InputManager.cpp  InputManager.h  Raytracing.cpp  Raytracing.h  RenderGraph.cpp  RenderGraph.h  RenderPass.cpp  RenderPass.h  Scene.cpp  Scene.h  ShaderLoading.cpp  ShaderLoading.h  View.cpp  View.h
Game/RenderPasses/: ComputeCopyRenderPass.cpp  ComputeCopyRenderPass.h  DebugUIRenderPass.cpp  DebugUIRenderPass.h  ForwardRenderPass.cpp  ForwardRenderPass.h  RenderPass.cpp  RenderPass.h  SwapChainBlitRenderPass.cpp  SwapChainBlitRenderPass.h  SwapChainCopyRenderPass.cpp  SwapChainCopyRenderPass.h  ToneMappingRenderPass.cpp  ToneMappingRenderPass.h  ZPrepassRenderPass.cpp  ZPrepassRenderPass.h
Graphics/CPURaytracing/: RayIntersection.cpp  RayIntersection.h
Graphics/Common/: GPUTimestamps.cpp  GPUTimestamps.h  GraphicsCommon.cpp  GraphicsCommon.h  ShaderManager.cpp  ShaderManager.h
Graphics/Vulkan/: Vulkan.cpp  Vulkan.h  VulkanCmds.cpp  VulkanCreation.cpp  VulkanCreation.h  VulkanTypes.cpp  VulkanTypes.h
Include/: PlatformGameAPI.h  PlatformGameGraphicsAPI.h  PlatformGameInputHandingAPI.h  PlatformGameInputHandlingAPI.h  PlatformGameThreadAPI.h
Include/Containers/: RingBuffer.h
Include/Core/: Allocators.h  CoreDefines.h  Logging.h  Mem.h  Sorting.h
Include/Math/: VectorTypes.h
Include/Platform/: GraphicsTypes.h  PlatformAPI.h  ShaderManager.h  Win32Client.h  Win32Logs.h  Win32Utilities.h  Win32Vulkan.h
Include/System/: Allocators.h  SystemDefines.h  WorkerThreadPool.h
Networking/: Win32Server.cpp
Platform/: PlatformCommon.h  PlatformGameAPI.h  PlatformGameGraphicsAPI.h  PlatformGameInputHandlingAPI.h  PlatformGameThreadAPI.h  ShaderManager.cpp  ShaderManager.h  Win32Client.cpp  Win32Layer.cpp  Win32Logging.cpp  Win32PlatformGameAPI.cpp  Win32Vulkan.cpp  Win32WorkerThreadPool.cpp
Platform/Graphics/: GPUMemAllocator.h  GraphicsCommon.cpp  GraphicsCommon.h  Vulkan.cpp  Vulkan.h  VulkanCmds.cpp  VulkanGPUMemAllocator.cpp  VulkanTypes.cpp  VulkanTypes.h
SPIR-V-VM/: CoreDefines.h  GLSL.std.450_Ops.c  GLSL.std.450_Ops.h  Main.c  Main.cpp  README.md  SpirvOps.c  SpirvOps.cpp  SpirvOps.h  SpirvVM.c  SpirvVM.cpp  SpirvVM.h  VMContext.h  VMShader.c  VMShader.h  VMState.c  VMState.cpp  VMState.h  VMTypes.h  spirv-vm.cpp  spirv-vm.h
SPIR-V-VM/KHR/: spirv.h
Scripts/: .vim.custom  README.md  benchmarks.bat  build.bat  build_app.bat  build_app_and_game_dll.bat  build_benchmarks.bat  build_compile_shaders_glsl2spv.bat  build_core_engine_lib.bat  build_engine.bat  build_game.bat  build_game_dll.bat  build_platform.bat  build_server.bat  build_shadercompiler.bat  build_spirv-vm.bat  build_spirv-vm.sh  build_tests.bat  compile_shaders_glsl2spv.bat  compile_single_file.bat  debugger.bat  ez-build_release.bat  game.bat  proj_debugger.bat  proj_shell.bat  proj_startVim.bat  run_game.bat  run_tests.bat  shell.bat  spirv-vm-demo.bat  tests.bat
Shaders/: basic.vert  basic_vert.spv
Shaders/glsl/: animpoly.frag  animpoly.vert  basic.frag  basic.vert  basic_noModelMat.vert  basic_virtualTex.frag  blit.frag  blit.vert
Shaders/hlsl/: ShaderDescriptors.h  SimpleTestVS.hlsl  animpoly_PS.hlsl  animpoly_VS.hlsl  basic_PS.hlsl  basic_VS.hlsl  basic_frag_hlsl.hlsl  blit_PS.hlsl  blit_VS.hlsl  blit_clear_PS.hlsl  blit_clear_VS.hlsl  grayscale_CS.hlsl  imgui_PS.hlsl  imgui_VS.hlsl  tonemapping_PS.hlsl
Shaders/spv/: basic_glsl_vert.spv  blit_glsl_frag.spv  blit_glsl_vert.spv
Source/: main.cpp
Source/Containers/: RingBuffer.h
Source/Math/: VectorTypes.cpp  VectorTypes.h
Source/Platform/: PlatformAPI.h  Win32Layer.cpp
Source/System/: CoreDefines.h  CoreTypes.h  SystemDefines.h  WorkerThreadPool.cpp  WorkerThreadPool.h
Source/Utils/: Timer.h
Test/: TestMain.cpp  TinkerTest.h
Test/AlgorithmTests/: SortingTests.h
Test/ContainerTests/: HashMapTests.h  RingBufferTests.h  VectorTests.h
Test/DataStructureTests/: HashMapTests.h  RingBufferTests.h  VectorTests.h
Test/MathTests/: MathTests.cpp  VectorTypeTests.cpp  VectorTypeTests.h
Test/MemoryTests/: AllocatorTests.h
Tools/ShaderCompiler/: Main.cpp  ShaderCompiler.cpp  ShaderCompiler.h
Utils/Natvis/: Tinker.natvis
(+34 files in other folders)
